[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/zylann.hterrain/tools/panel.gd" type="Script" id=1]
[ext_resource path="res://addons/zylann.hterrain/tools/brush/brush_editor.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/zylann.hterrain/tools/texture_editor/texture_editor.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/zylann.hterrain/tools/detail_editor/detail_editor.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/zylann.hterrain/tools/minimap.gd" type="Script" id=5]

[node name="Panel" type="Control"]
margin_right = 895.0
margin_bottom = 112.0
rect_min_size = Vector2( 400, 112 )
script = ExtResource( 1 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -6.0
margin_bottom = -4.0
split_offset = 60

[node name="BrushEditor" parent="HSplitContainer" instance=ExtResource( 2 )]
margin_right = 260.0
margin_bottom = 104.0

[node name="HSplitContainer" type="HSplitContainer" parent="HSplitContainer"]
margin_left = 272.0
margin_right = 885.0
margin_bottom = 104.0

[node name="HSplitContainer" type="HSplitContainer" parent="HSplitContainer/HSplitContainer"]
margin_right = 501.0
margin_bottom = 104.0
size_flags_horizontal = 3
split_offset = 150

[node name="TextureEditor" parent="HSplitContainer/HSplitContainer/HSplitContainer" instance=ExtResource( 3 )]
margin_right = 250.0
size_flags_horizontal = 1

[node name="DetailEditor" parent="HSplitContainer/HSplitContainer/HSplitContainer" instance=ExtResource( 4 )]
margin_left = 262.0
margin_right = 501.0
margin_bottom = 104.0

[node name="Minimap" type="ColorRect" parent="HSplitContainer/HSplitContainer"]
margin_left = 513.0
margin_right = 613.0
margin_bottom = 104.0
rect_min_size = Vector2( 100, 0 )
color = Color( 0, 0, 0, 1 )
script = ExtResource( 5 )
[connection signal="texture_selected" from="HSplitContainer/HSplitContainer/HSplitContainer/TextureEditor" to="." method="_on_TextureEditor_texture_selected"]
[connection signal="detail_list_changed" from="HSplitContainer/HSplitContainer/HSplitContainer/DetailEditor" to="." method="_on_DetailEditor_detail_list_changed"]
[connection signal="detail_selected" from="HSplitContainer/HSplitContainer/HSplitContainer/DetailEditor" to="." method="_on_DetailEditor_detail_selected"]
